--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="color4">#FFAE33</color>
     <color name="color5">#2A2A32</color>
     <color name="color6">#EAEEF7</color>
+    <color name="color7">#FBFBFB</color>
 </resources>
