--- a/app/src/main/res/layout/activity_dashbord.xml
+++ b/app/src/main/res/layout/activity_dashbord.xml
@@ -16,10 +16,10 @@
     <Button
         android:id="@+id/logout"
         android:layout_width="30dp"
-        android:layout_height="10dp"
+        android:layout_height="13dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="28dp"
-        android:background="@drawable/icon_strip"
+        android:background="@drawable/logout_user"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -179,7 +179,7 @@
                             android:layout_width="70dp"
                             android:layout_height="70dp"
                             android:layout_marginRight="15dp"
-                            android:background="@drawable/icon_keuangan" />
+                            android:background="@drawable/icon_keuangan2" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
