--- a/app/src/main/res/layout/activity_laporan_owner.xml
+++ b/app/src/main/res/layout/activity_laporan_owner.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color6"
-    tools:context=".LaporanUangAct">
+    tools:context=".LaporanOwnerAct"
+    android:background="@color/color6">
+
 
     <ImageView
         android:id="@+id/imageView4"
@@ -83,9 +84,9 @@
             android:paddingBottom="100dp">
 
             <!--<android.support.v7.widget.RecyclerView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:id="@+id/laporan_uang_place">-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:id="@+id/laporan_uang_place">-->
 
 
             <!--</android.support.v7.widget.RecyclerView>-->
@@ -319,17 +320,6 @@
 
 
     </ScrollView>
-
-    <Button
-        android:id="@+id/btnplus"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/icon_plus"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
 
 
 </android.support.constraint.ConstraintLayout>
